# AdventOfCode2021

./: Cargo.toml
src/: day1.rs  day10_1.rs  day10_2.rs  day11_1.rs  day11_2.rs  day2_1.rs  day2_2.rs  day3_1.rs  day3_2.rs  day4_1.rs  day4_2.rs  day5_1.rs  day5_2.rs  day6_1.rs  day6_2.rs  day7_1.rs  day7_2.rs  day8_1.rs  day8_2.rs  day9_1.rs  day9_2.rs
