[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2_1"
path = "src/day2_1.rs"

[[bin]]
name = "day2_2"
path = "src/day2_2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
