[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2_1"
path = "src/day2_1.rs"

[[bin]]
name = "day2_2"
path = "src/day2_2.rs"

[[bin]]
name = "day3_1"
path = "src/day3_1.rs"

[[bin]]
name = "day3_2"
path = "src/day3_2.rs"

[[bin]]
name = "day4_1"
path = "src/day4_1.rs"

[[bin]]
name = "day4_2"
path = "src/day4_2.rs"

[[bin]]
name = "day5_1"
path = "src/day5_1.rs"

[[bin]]
name = "day5_2"
path = "src/day5_2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
